Thesis: almost nothing, just one paragraph.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -253,13 +253,15 @@ Moving on to the type-directed rules: for each type there is exactly one rule (c
 
 Rules for terms (i.e. for the typing judgement) can be divided into two main genres: introduction rules (also called constructors) and elimination rules (also called eliminators). Introduction rules for a type tell us how to create new terms of this type. For example, there are two introduction rules for natural numbers. The first says that $\term{\Gamma}{0}{\N}$, i.e. that $0$ is a natural number. The second says that given $\term{\Gamma}{n}{\N}$, we have $\term{\Gamma}{\suc{n}}{\N}$, i.e. that when we have a natural number $n$, its successor $\suc{n}$ is also a natural number. A type need not have any introduction rules at all -- for example, the empty type $\bot$ doesn't have introduction rules because we don't want to have any way of creating terms of this type.
 
-Elimination rules for a type, on the other hand, tell us how to use terms of this type to create terms of other types. For example, the simplest elimination rule for $\N$ says that if $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$, then $\term{\Gamma}{\recN{z}{s}{n}}{X}$. This rule, alternatively called a recursor, allows us to define functions by recursion on natural numbers, but to do proofs by induction we would need a stronger elimination rule which we won't state here to keep things simple. As with introduction rules, a type needs not have elimination rules. This is traditionally the case with the unvierse of types $\mathcal{U}$, although the reason behind this tradition is not clear.\footnote{One possible answer can be that an eliminator for $\mathcal{U}$ breaks parametricity. A more modern answer would be that it contradicts Univalence. \cite{HoTTBlog} For a language that allows eliminating types, see Idris 2. \cite{Idris2}}
+Elimination rules for a type, on the other hand, tell us how to use terms of this type to create terms of other types. For example, the simplest elimination rule for $\N$ says that if $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$, then $\term{\Gamma}{\recN{z}{s}{n}}{X}$. This rule, alternatively called a recursor, allows us to define functions with codomain $X$ by recursion on natural numbers, but to do proofs by induction we would need a stronger elimination rule which we won't state here to keep things simple. As with introduction rules, a type needs not have elimination rules. This is traditionally the case with the universe of types $\mathcal{U}$, although the reason behind this tradition is not clear.\footnote{One possible answer can be that an eliminator for $\mathcal{U}$ breaks parametricity. A more modern answer \cite{HoTTBlog} would be that it contradicts Univalence. For a language that allows eliminating types, see Idris 2. \cite{Idris2}}
 
 \label{convertible}
 
-Now that we know how programs and their specifications (i.e. terms and types) work in our model of computation, it would be nice to learn about computation itself.
+Now that we know how programs and their specifications (i.e. terms and types) work in our type-theoretical model of computation, it's time to learn about computation itself. Here too type theory is pretty unusual (as far as models of computation are concerned): instead of specifying how computation of a given program proceeds, it specifies which programs are considered equal. A priori program equality has nothing to do with computation,\footnote{Well, not really. WUUT} but a posteriori the end result of this setup is that programs are equal when they compute the same result, irrespective of how long it takes or in what order the computation steps are performed.
 
-The next thing we are interested in is convertibility, which formalizes the notion of computation. Intuitively, two terms are convertible if they evaluate\footnote{We leave the idea of evaluation informal and won't describe it in more detail.} to the same result. For example, we would expect that both $2 + 2$ and $4$ evaluate to $4$, and this is indeed the case, so they are convertible. To state that formally, we write $\termconv{\Gamma}{2 + 2}{4}{\N}$. Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules.
+
+
+. For example, we would expect that both $2 + 2$ and $4$ evaluate to $4$, and this is indeed the case, so they are convertible. To state that formally, we write $\termconv{\Gamma}{2 + 2}{4}{\N}$. Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules.
 
 Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, we have $\termconv{\Gamma}{\recN{z}{s}{0}}{z}{X}$, and the second rule states that given $\term{\Gamma}{z}{X}$, $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$ we have $\termconv{\Gamma}{\recN{z}{s}{\suc{n}}}{s(\recN{z}{s}{n})}{X}$.
 
@@ -275,7 +277,7 @@ The most important rule that involves type convertibility is called the subsumpt
 
 Some presentations of type theory can also include other judgements. Some have a context convertibility judgement. Others can have judgements for explicit substitutions. Yet others can drop the type formation judgement and type convertibility judgement and go with universes.
 
-cite: 
+
 
 An astute reader has probably noticed that we sneaked into the above description a word that is familiar but was not defined, namely ``element''. The elements of a type $A$ are its closed terms that are in normal form. A term is closed if its context is empty and it is in normal form if it is the final result of evaluation, i.e. it can't be evaluated any further.
 
