Thesis: refactoring paragraphs that introduce the convertibility judgement.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -257,17 +257,20 @@ Elimination rules for a type, on the other hand, tell us how to use terms of thi
 
 \label{convertible}
 
-Now that we know how programs and their specifications (i.e. terms and types) work in our type-theoretical model of computation, it's time to learn about computation itself. Here too type theory is pretty unusual (as far as models of computation are concerned): instead of specifying how computation of a given program proceeds, it specifies which programs are considered equal. A priori program equality has nothing to do with computation,\footnote{Well, not really. WUUT} but a posteriori the end result of this setup is that programs are equal when they compute the same result, irrespective of how long it takes or in what order the computation steps are performed.
+Now that we know how programs and their specifications work in our type-theoretical model of computation, it's time to learn about computation itself. Here too type theory is pretty unusual (as far as models of computation are concerned): instead of specifying how computation of a given program proceeds, it specifies which programs are considered equal. At first sight it may seem that equality has nothing to do with computation, but at a second glance there is an obvious link: whenever we have an equivalence relation $R$, we may think of its equivalence classes as preimages of elements of the codomain of some function $f$, and conversely we may see $f$ as computing a canonical representative of each equivalence class of $R$. In our setting, the relation $R$ is program equality, whereas the function $f$ to each program assigns its final result. So, in the end, we want to define program equality in such a way that programs are equal when they compute the same result, irrespective of how long it takes or in what order the computation steps are performed.
 
+In type theory, programs are terms and their equality is realized by introducing a new judgement $\termconv{\Gamma}{t_1}{t_2}{A}$ which asserts that in context $\Gamma$, $t_1$ and $t_2$ are convertible\footnote{Other names for this judgement include ``definitional equality'' and ``judgemental equality''.} terms of type $A$. For example, the judgement $\termconv{\Gamma}{2 + 2}{3 + 1}{\N}$ asserts that $2 + 2$ and $3 + 1$ are convertible terms of type $\N$, whereas $\termconv{\Gamma}{\lambda n. 3 + n}{\lambda n. 5 + n}{\N \to \N}$ asserts that the functions which add three and five to their arguments, respectively, are convertible. Both $2 + 2$ and $3 + 1$ should compute the result $4$, so we expect the first judgement to be derivable, whereas we expect the second one not to be derivable, even if we're not entirely sure what do these functions compute to for an unspecified $n$.
 
+The core inference rules that govern the convertibility judgement ensure that it is an equivalence relation. For example, there's a rule establishing that convertibility is symmetric, which means that given $\termconv{\Gamma}{t_1}{t_2}{A}$, we can derive $\termconv{\Gamma}{t_2}{t_1}{A}$. We omit the obvious rules for reflexivity and transitivity. Sometimes these core rules are admissible, i.e. they are not included in the definition of convertibility, but rather proved from this definition.
 
-. For example, we would expect that both $2 + 2$ and $4$ evaluate to $4$, and this is indeed the case, so they are convertible. To state that formally, we write $\termconv{\Gamma}{2 + 2}{4}{\N}$. Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules.
+Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules.
 
 Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, we have $\termconv{\Gamma}{\recN{z}{s}{0}}{z}{X}$, and the second rule states that given $\term{\Gamma}{z}{X}$, $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$ we have $\termconv{\Gamma}{\recN{z}{s}{\suc{n}}}{s(\recN{z}{s}{n})}{X}$.
 
 Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for $\N$ states that given $\term{\Gamma}{n}{\N}$, we have $\termconv{\Gamma}{\recN{0}{\m{succ}}{n}}{n}{\N}$. Note, however, that this uniqueness rule for natural numbers is rarely included in most presentations of type theory.
 
-Besides computation and uniqueness rules, there are also two minor genres of rules for convertibility. First, there are three rules which ensure that convertibility is an equivalence relation. For example, there's a rule establishing that convertibility is symmetric, which says that given $\termconv{\Gamma}{t_1}{t_2}{A}$, we have $\termconv{\Gamma}{t_2}{t_1}{A}$. Sometimes these rules are admissible, i.e. they are not assumed in the definition of convertibility, but rather proved from this definition.
+Besides computation and uniqueness rules, there are also two minor genres of rules for convertibility. 
+
 
 Second, there is also a very huge number of boring technical rules (we can call them congruence rules) which ensure that convertibility behaves well with respect to introduction and elimination rules. For example, we have a rule which says that successors of convertible natural numbers are convertible, i.e. that given $\termconv{\Gamma}{n}{m}{\N}$, we have $\termconv{\Gamma}{\suc{n}}{\suc{m}}{\N}$. For the elimination rules, we have a rule which says that given $\termconv{\Gamma}{z_1}{z_2}{X}$ and $\termconv{\Gamma}{s_1}{s_2}{X \to X}$ and $\termconv{\Gamma}{n_1}{n_2}{\N}$, we have $\termconv{\Gamma}{\recN{z_1}{s_1}{n_1}}{\recN{z_2}{s_2}{n_2}}{X}$.
 
