Thesis: finished the new description of term and type convertibility.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -257,28 +257,27 @@ Elimination rules for a type, on the other hand, tell us how to use terms of thi
 
 \label{convertible}
 
-Now that we know how programs and their specifications work in our type-theoretical model of computation, it's time to learn about computation itself. Here too type theory is pretty unusual (as far as models of computation are concerned): instead of specifying how computation of a given program proceeds, it specifies which programs are considered equal. At first sight it may seem that equality has nothing to do with computation, but at a second glance there is an obvious link: whenever we have an equivalence relation $R$, we may think of its equivalence classes as preimages of elements of the codomain of some function $f$, and conversely we may see $f$ as computing a canonical representative of each equivalence class of $R$. In our setting, the relation $R$ is program equality, whereas the function $f$ to each program assigns its final result. So, in the end, we want to define program equality in such a way that programs are equal when they compute the same result, irrespective of how long it takes or in what order the computation steps are performed.
+Now that we know how programs and their specifications work in our type-theoretical model of computation, it's time to learn about computation itself. Here too type theory is pretty unusual (as far as models of computation are concerned): instead of specifying how computation of a given program proceeds, it specifies which programs are considered equal. At first sight it may seem that equality has nothing to do with computation, but at a second glance there is an obvious link: whenever we have an equivalence relation $R$, we may think of its equivalence classes as preimages of elements of the codomain of some function $f$, and conversely we may see $f$ as computing a canonical representative of each equivalence class of $R$. In our setting, the relation $R$ is program equality, whereas the function $f$ to each program assigns its final result. So, in the end, if we define program equality in the appropriate way, we will get the appropriate notion of computation for free. By ``appropriate'' we mean that programs are equal when they compute the same result, irrespective of how long it takes or in what order the computation steps are performed.
 
-In type theory, programs are terms and their equality is realized by introducing a new judgement $\termconv{\Gamma}{t_1}{t_2}{A}$ which asserts that in context $\Gamma$, $t_1$ and $t_2$ are convertible\footnote{Other names for this judgement include ``definitional equality'' and ``judgemental equality''.} terms of type $A$. For example, the judgement $\termconv{\Gamma}{2 + 2}{3 + 1}{\N}$ asserts that $2 + 2$ and $3 + 1$ are convertible terms of type $\N$, whereas $\termconv{\Gamma}{\lambda n. 3 + n}{\lambda n. 5 + n}{\N \to \N}$ asserts that the functions which add three and five to their arguments, respectively, are convertible. Both $2 + 2$ and $3 + 1$ should compute the result $4$, so we expect the first judgement to be derivable, whereas we expect the second one not to be derivable, even if we're not entirely sure what do these functions compute to for an unspecified $n$.
+In type theory, programs are terms and their equality is realized by introducing a new judgement $\termconv{\Gamma}{t_1}{t_2}{A}$ which asserts that in context $\Gamma$, $t_1$ and $t_2$ are convertible\footnote{Other common names for this judgement include ``definitional equality'' and ``judgemental equality'', but we won't use them. Perhaps a better name in this fashion would be ``computational equality''.} terms of type $A$. For example, the judgement $\termconv{\Gamma}{2 + 2}{3 + 1}{\N}$ asserts that $2 + 2$ and $3 + 1$ are convertible terms of type $\N$, whereas $\termconv{\Gamma}{\lambda n. 3 + n}{\lambda n. 5 + n}{\N \to \N}$ asserts that the functions which add three and five to their arguments, respectively, are convertible. Both $2 + 2$ and $3 + 1$ should compute the result $4$, so we expect the first judgement to be derivable, whereas we expect the second one not to be derivable, even if we're not entirely sure what do these functions compute to for an unspecified $n$.
 
-The core inference rules that govern the convertibility judgement ensure that it is an equivalence relation. For example, there's a rule establishing that convertibility is symmetric, which means that given $\termconv{\Gamma}{t_1}{t_2}{A}$, we can derive $\termconv{\Gamma}{t_2}{t_1}{A}$. We omit the obvious rules for reflexivity and transitivity. Sometimes these core rules are admissible, i.e. they are not included in the definition of convertibility, but rather proved from this definition.
+The core inference rules that govern the convertibility judgement ensure that it is an equivalence relation. For example, there's a rule establishing that convertibility is symmetric, which means that given $\termconv{\Gamma}{t_1}{t_2}{A}$, we can derive $\termconv{\Gamma}{t_2}{t_1}{A}$. We omit the obvious rules for reflexivity and transitivity. Sometimes these core rules are only admissible, i.e. they are proved to hold even though they are not explicitly included in the definition of convertibility.
 
-Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules.
+Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules. Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, we have $\termconv{\Gamma}{\recN{z}{s}{0}}{z}{X}$, and the second rule states that given $\term{\Gamma}{z}{X}$, $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$ we have $\termconv{\Gamma}{\recN{z}{s}{\suc{n}}}{s(\recN{z}{s}{n})}{X}$.
 
-Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, we have $\termconv{\Gamma}{\recN{z}{s}{0}}{z}{X}$, and the second rule states that given $\term{\Gamma}{z}{X}$, $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$ we have $\termconv{\Gamma}{\recN{z}{s}{\suc{n}}}{s(\recN{z}{s}{n})}{X}$.
+Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for $\N$ states that given $\term{\Gamma}{n}{\N}$, we have $\termconv{\Gamma}{\recN{0}{\m{succ}}{n}}{n}{\N}$. Note that uniqueness rules are completely optional -- a type need not have any. For example, almost all presentations of type theory don't have the above uniqueness rule for natural numbers. As for other types, uniqueness rules are common for the unit type, the product type and the function type. For other types uniqueness rules are rare.
 
-Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for $\N$ states that given $\term{\Gamma}{n}{\N}$, we have $\termconv{\Gamma}{\recN{0}{\m{succ}}{n}}{n}{\N}$. Note, however, that this uniqueness rule for natural numbers is rarely included in most presentations of type theory.
+Besides computation and uniqueness rules, there is also a huge number of congruence rules which ensure that convertibility behaves well with respect to introduction and elimination rules. For example, we have a rule which says that the successors of convertible natural numbers are convertible, i.e. that given $\termconv{\Gamma}{n}{m}{\N}$, we have $\termconv{\Gamma}{\suc{n}}{\suc{m}}{\N}$. For the elimination rules, we have a rule which says that given $\termconv{\Gamma}{z_1}{z_2}{X}$ and $\termconv{\Gamma}{s_1}{s_2}{X \to X}$ and $\termconv{\Gamma}{n_1}{n_2}{\N}$, we have $\termconv{\Gamma}{\recN{z_1}{s_1}{n_1}}{\recN{z_2}{s_2}{n_2}}{X}$.
 
-Besides computation and uniqueness rules, there are also two minor genres of rules for convertibility. 
+This is the end of our description of convertibility of terms, but the matter of computation hasn't been settled yet. Because types can depend on terms, computation can also occur inside types, which prompts us to consider not only term equality, but also type equality. Recall the type $\type{n : \N}{\Fin{n}}$ that has exactly $n$ elements. What relationships are there between instances of this type with various terms substituted\footnote{We won't discuss substitution in our presentation for type theory.} for $n$? For example, what is the relation between the types $\Fin{2 + 2}$ and $\Fin{3 + 1}$? Are they the same or different?
 
+To even be able to ask this question formally, we need another kind of judgement, namely the type convertibility judgement $\typeconv{\Gamma}{A}{B}$ which asserts that the types $A$ and $B$ are convertible. Similarly to what was the case for term convertibility, if the inference rules for this judgement are defined in the right way, we obtain for free a notion of type computation such that two types are convertible precisely when they compute to the same result.
 
-Second, there is also a very huge number of boring technical rules (we can call them congruence rules) which ensure that convertibility behaves well with respect to introduction and elimination rules. For example, we have a rule which says that successors of convertible natural numbers are convertible, i.e. that given $\termconv{\Gamma}{n}{m}{\N}$, we have $\termconv{\Gamma}{\suc{n}}{\suc{m}}{\N}$. For the elimination rules, we have a rule which says that given $\termconv{\Gamma}{z_1}{z_2}{X}$ and $\termconv{\Gamma}{s_1}{s_2}{X \to X}$ and $\termconv{\Gamma}{n_1}{n_2}{\N}$, we have $\termconv{\Gamma}{\recN{z_1}{s_1}{n_1}}{\recN{z_2}{s_2}{n_2}}{X}$.
+The most important core rule that involves type convertibility is called the subsumption rule. It says that if we can derive $\term{\Gamma}{t}{A}$ and $\typeconv{\Gamma}{A}{B}$, then we can also derive $\term{\Gamma}{t}{B}$. The other rules that govern type convertibility aren't terribly interesting. Similarly to term convertibility, we have three core rules which establish that type convertibility is an equivalence relation. For example, we have a rule which says that if we can derive $\typeconv{\Gamma}{A}{B}$ and $\typeconv{\Gamma}{B}{C}$, then we can derive $\typeconv{\Gamma}{A}{C}$ Just as in the case of term convertibility, these three rules can be admissible instead.
 
-Because types can depend on terms, computation can also occur inside types. For example, given the previously mentioned type $\type{n : \N}\Fin{n}$, what is the relation between the types $\Fin{2 + 2}$ and $\Fin{4}$? Are they the same or different? To even be able to ask this question formally, we need another kind of judgement, namely the type convertibility judgement $\typeconv{\Gamma}{A}{B}$ which asserts that the types $A$ and $B$ compute to the same type.
+Moreover, for each type formation rule we have one congruence rule which says that types formed from equal components are equal. For example, for the type $\Fin{n}$ we have the congruence rule which says if we can derive $\termconv{\Gamma}{n}{m}{\N}$, then we can derive $\typeconv{\Gamma}{\Fin{n}}{\Fin{m}}$. These congruence rules allow us to answer our initial question in the affirmative -- because $2 + 2$ and $3 + 1$ are convertible, i.e. $\termconv{\Gamma}{2 + 2}{3 + 1}{\N}$, the types $\Fin{2 + 2}$ and $\Fin{3 + 1}$ are also convertible, i.e. $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{3 + 1}}$.
 
-The most important rule that involves type convertibility is called the subsumption rule. It says that if we can derive $\term{\Gamma}{t}{A}$ and $\typeconv{\Gamma}{A}{B}$, then we can also derive $\term{\Gamma}{t}{B}$. The other rules that govern type convertibility aren't terribly interesting. Similarly to term convertibility, we have three rules which establish that type convertibility is an equivalence relation. For example, we have a rule which says that if we can derive $\typeconv{\Gamma}{A}{B}$ and $\typeconv{\Gamma}{B}{C}$, then we can derive $\typeconv{\Gamma}{A}{C}$. Second, for each type formation rule we have one congruence rule which says that types formed from equal components are equal. For example, for the type $\Fin{n}$ we have the congruence rule which says if we can derive $\termconv{\Gamma}{n}{m}{\N}$, then we can derive $\typeconv{\Gamma}{\Fin{n}}{\Fin{m}}$. These congruence rules allow us to answer our initial question in the affirmative -- because $2 + 2$ and $4$ are convertible, i.e. $\termconv{\Gamma}{2 + 2}{4}{\N}$, the types $\Fin{2 + 2}$ and $\Fin{4}$ are also convertible, i.e. $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{4}}$. 
-
-Some presentations of type theory can also include other judgements. Some have a context convertibility judgement. Others can have judgements for explicit substitutions. Yet others can drop the type formation judgement and type convertibility judgement and go with universes.
+We are mostly done describing type theory, but we will take some more time to list differences between our presentation and what may be found elsewhere. First, some presentations of type theory can also include other judgements. For example, there may be a context convertibility judgement -- because types like $\Fin{2 + 2}$ and $\Fin{3 + 1}$ can appear in assumptions, judging whether two contexts are the same may be of some importance. We didn't discuss substitution in our presentation of type theory, but there are typically two ways of doing it. The first one is to define a meta-level substitution function by recursion. The second one is to introduce even more judgements and inference rules: the explicit substitution judgement, the substitution convertibility judgement, and add a lot of inference rules for term and type convertibility which describe how the substitutions are actually performed. Yet others can drop the type formation judgement and type convertibility judgement and go with universes.
 
 
 
